2002-05-20  Ognyan Kulev <ogi@fmi.uni-sofia.bg>

	* Makefile: Move inclusion of ../Makeconf before using $(srcdir)
	and constrain vpath directives to avoid using ../exec/exec.o.

2002-05-07  Roland McGrath  <roland@frob.com>

	* default_pager.c (part_id): Add const to argument type.

2002-03-23  Roland McGrath  <roland@frob.com>

	Excised default pager functionality from serverboot.
	* Makefile (SRCS): Move def_pager_setup.c default_pager.c kalloc.c to
	(EXTRA_DIST): ... here.
	(OBJS): Remove *Server.o from here.
	(MIGSFLAGS): Variable removed.
	* bootstrap.c (main): Replace paging-file boot-script functions with a
	stub that prints an error.  No longer call partition_init,
	default_pager_initialize, or default_pager.
	(default_pager_bootstrap_port): Variable removed.
	(main): Don't use it.
	(default_pager_exception_port): Declaration removed.
	(main): Don't use it.
	* default_pager.c (default_pager_bootstrap_port): Variable removed.
	(default_pager_demux_default): Don't use it.
	(default_pager_initialize): Likewise.
	(default_pager): Likewise.
	(do_bootstrap_privileged_ports, bootstrap_compat): Functions removed.
	[mips] (set_ras_address): Likewise.

	* default_pager.c (pager_truncate): New function.
	(struct dpager): New member `limit'.
	(pager_alloc): Initialize it.
	(default_pager_object_set_size): New function.
	(seqnos_memory_object_lock_completed): Rewritten, no longer a stub.
	(default_pager_demux_object): Try default_pager_server too.

2001-11-24  Roland McGrath  <roland@frob.com>

	* Makefile (installationdir): Use $(bootdir).

2001-08-16  Roland McGrath  <roland@frob.com>

	* Makefile (OBJS): Add userland-boot.o here.
	Add a vpath to find userland-boot.c in boot/ too.
	* bootstrap.c (parse_script): Pass new arg to boot_script_parse_line.
	* load.c: Include <stddef.h> before "boot_script.h".

2001-07-20  Roland McGrath  <roland@frob.com>

	* panic.c: Fix obsolescent #endif syntax.
	* ext2_file_io.c: Likewise.
	* disk_inode_ffs.h: Likewise.