@@ -1,3 +1,7 @@
+2002-05-23  Marcus Brinkmann  <marcus@gnu.org>
+
+	* Makefile: Fix last change, constraining vpath even further.
+
 2002-05-20  Ognyan Kulev <ogi@fmi.uni-sofia.bg>
 
 	* Makefile: Move inclusion of ../Makeconf before using $(srcdir)
